--- a/assets/css/stattic.css
+++ b/assets/css/stattic.css
@@ -90,10 +90,11 @@ h1, h2, h3, h4, h5, h6 {
     margin-bottom: 1.5rem;
     font-weight: 400;
     color: var(--text-color);
+    font-family: 'Bungee Spice';
 }
 
 .stattic-content h1 {
-    font-size: 2.5rem; /* Larger for emphasis */
+    font-size: 2.5rem;
 }
 
 .stattic-content h2 {
