--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -2,50 +2,10 @@
 @font-face {
     font-family: 'Bungee Spice';
     font-style: normal;
-    font-weight: 300;
-    font-display: swap;
-    src: url('../fonts/bungee spice-300.woff2') format('woff2'), 
-         url('../fonts/bungee spice-300.ttf') format('truetype');
-}
-
-@font-face {
-    font-family: 'Bungee Spice';
-    font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: url('../fonts/bungee spice-400.woff2') format('woff2'), 
-         url('../fonts/bungee spice-400.ttf') format('truetype');
-}
-
-@font-face {
-    font-family: 'Bungee Spice';
-    font-style: normal;
-    font-weight: 500;
-    font-display: swap;
-    src: url('../fonts/bungee spice-500.woff2') format('woff2'), 
-         url('../fonts/bungee spice-500.ttf') format('truetype');
-}
-
-@font-face {
-    font-family: 'Bungee Spice';
-    font-style: normal;
-    font-weight: 600;
-    font-display: swap;
-    src: url('../fonts/bungee spice-600.woff2') format('woff2'), 
-         url('../fonts/bungee spice-600.ttf') format('truetype');
-}
-
-@font-face {
-    font-family: 'Bungee Spice';
-    font-style: normal;
-    font-weight: 700;
-    font-display: swap;
-    src: url('../fonts/bungee spice-700.woff2') format('woff2'), 
-         url('../fonts/bungee spice-700.ttf') format('truetype');
-}
-
-body {
-    font-family: 'Bungee Spice', sans-serif;
+    src: url('../fonts/bungee-spice-400.woff2') format('woff2'), 
+         url('../fonts/bungee-spice-400.ttf') format('truetype');
 }
 
 @font-face {
