--- a/assets/css/stattic.css
+++ b/assets/css/stattic.css
@@ -90,7 +90,7 @@ h1, h2, h3, h4, h5, h6 {
     margin-bottom: 1.5rem;
     font-weight: 700;
     color: var(--text-color);
-    font-family: 'Inter';
+    font-family: 'Inter', Helvetica, Arial, sans-serif;
 }
 
 .stattic-content h1 {
